--- a/example-sqlalchemy.ipynb
+++ b/example-sqlalchemy.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This was initially cloned by https://github.com/rahulbot/notebook-examples and modified for the purpose of \n",
+    "doing an assignment on MAS.500 class.\n",
+    "\n",
     "Fetching Webpages with the Requests Library To Demonstrate\n",
     "===========================================\n",
     "SqlAlchemy helps you use a database to store and retrieve information from python.  It abstracts the specific storage engine from te way you use it - so it doesn't care if you end up using MySQL, SQLite, or whatever else. In addition, you can use core and the object-relational mapper (ORM) to avoid writing any SQL at all.  The [SQLAlchemy homepage](http://www.sqlalchemy.org/) has lots of good examples and full documentation."
@@ -11,7 +14,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "connected to media cloud\n",
+      "59223\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mediacloud\n",
+    "from ConfigParser import ConfigParser\n",
+    "\n",
+    "config = ConfigParser()\n",
+    "config.read('config.cfg') # git ignore\n",
+    "api_key = config.get('Media Cloud','my_api')\n",
+    "\n",
+    "def connect_to_media_cloud(_api_token):\n",
+    "    mc = mediacloud.api.MediaCloud(_api_token)\n",
+    "    \n",
+    "    if not mc.verifyAuthToken():\n",
+    "        print 'media cloud authentication failed'\n",
+    "        return None\n",
+    "    else:\n",
+    "        print 'connected to media cloud'\n",
+    "        return mc\n",
+    "\n",
+    "mc = connect_to_media_cloud(api_key)\n",
+    "\n",
+    "def sentence_count(_keyword):\n",
+    "    '''\n",
+    "    simplified version of sentenceCount function. Gets the number\n",
+    "    from the start of this year(2015) until today.\n",
+    "    '''\n",
+    "    result = mc.sentenceCount(_keyword,\n",
+    "                         solr_filter =[\n",
+    "                        mc.publish_date_query(\n",
+    "                        datetime.date(2015,1,1),\n",
+    "                        datetime.date.today()),\n",
+    "                        'media_sets_id:1'])\n",
+    "    return result['count']\n",
+    "\n",
+    "\n",
+    "# test sentence count\n",
+    "japan_count = sentence_count('japan') \n",
+    "\n",
+    "print japan_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -39,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -52,6 +111,7 @@
     "queries = Table('queries', metadata,\n",
     "    Column('id', Integer, primary_key=True),\n",
     "    Column('keywords', String(400), nullable=False),\n",
+    "    Column('count',Integer),\n",
     "    Column('timestamp', DateTime, default=datetime.datetime.now),\n",
     ")\n",
     "metadata.create_all(engine) # and create the tables in the database"
@@ -67,11 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'INSERT INTO queries (id, keywords, count, timestamp) VALUES (:id, :keywords, :count, :timestamp)'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "insert_stmt = queries.insert()\n",
     "str(insert_stmt) # see an example of what this will do"
@@ -79,23 +150,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'INSERT INTO queries (keywords, count, timestamp) VALUES (:keywords, :count, :timestamp)'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "insert_stmt = queries.insert().values(keywords=\"puppies\")\n",
+    "insert_stmt = queries.insert().values(keywords=\"puppies\",count=sentence_count(\"puppies\"))\n",
     "str(insert_stmt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "db_conn = engine.connect()\n",
     "result = db_conn.execute(insert_stmt)\n",
@@ -104,13 +197,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "insert_stmt = queries.insert().values(keywords=\"kittens\")\n",
+    "insert_stmt = queries.insert().values(keywords=\"kittens\",count=sentence_count(\"kittens\"))\n",
     "result = db_conn.execute(insert_stmt)\n",
     "result.inserted_primary_key # print out the primary key it was assigned"
    ]
@@ -125,11 +229,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, u'puppies', 5678, datetime.datetime(2015, 12, 2, 20, 6, 57, 460742))\n",
+      "(2, u'kittens', 2804, datetime.datetime(2015, 12, 2, 20, 7, 3, 842666))\n"
+     ]
+    }
+   ],
    "source": [
     "from sqlalchemy.sql import select\n",
     "select_stmt = select([queries])\n",
@@ -140,11 +253,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, u'puppies', datetime.datetime(2015, 12, 2, 19, 52, 12, 10677))\n"
+     ]
+    }
+   ],
    "source": [
     "select_stmt = select([queries]).where(queries.c.id==1)\n",
     "for row in db_conn.execute(select_stmt):\n",
@@ -153,15 +274,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, u'puppies', 5678, datetime.datetime(2015, 12, 2, 20, 6, 57, 460742))\n"
+     ]
+    }
+   ],
    "source": [
     "select_stmt = select([queries]).where(queries.c.keywords.like('p%'))\n",
     "for row in db_conn.execute(select_stmt):\n",
     "    print row"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Homework 1 : Add a select and for loop for getting the sum of the sentence count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8482\n"
+     ]
+    }
+   ],
+   "source": [
+    "#sum of the 'counts'\n",
+    "total_sentence_count = 0\n",
+    "select_stmt = select([queries])\n",
+    "results = db_conn.execute(select_stmt)\n",
+    "for row in results:\n",
+    "    total_sentence_count += row[2]\n",
+    "\n",
+    "print total_sentence_count"
    ]
   },
   {
@@ -174,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -205,10 +367,10 @@
     {
      "data": {
       "text/plain": [
-       "Table('queries', MetaData(bind=None), Column('id', Integer(), table=<queries>, primary_key=True, nullable=False), Column('keywords', String(length=400), table=<queries>), Column('timestamp', DateTime(), table=<queries>, default=ColumnDefault(<function <lambda> at 0x108946140>)), schema=None)"
+       "Table('queries', MetaData(bind=None), Column('id', Integer(), table=<queries>, primary_key=True, nullable=False), Column('keywords', String(length=400), table=<queries>), Column('timestamp', DateTime(), table=<queries>, default=ColumnDefault(<function <lambda> at 0x7f67cf3caaa0>)), Column('count', Integer(), table=<queries>), schema=None)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,6 +381,7 @@
     "    id = Column(Integer, primary_key=True)\n",
     "    keywords = Column(String(400))\n",
     "    timestamp = Column(DateTime,default=datetime.datetime.now)\n",
+    "    count = Column(Integer)\n",
     "    def __repr__(self):\n",
     "        return \"<Query(keywords='%s')>\" % (self.keywords)\n",
     "Query.__table__"
@@ -234,15 +397,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "engine = create_engine('sqlite:///:memory:') # just save the db in memory for now (ie. not on disk)\n",
     "Base.metadata.create_all(engine)\n",
     "Session = sessionmaker(bind=engine)\n",
+    "# a stack of queries\n",
     "my_session = Session()"
    ]
   },
@@ -256,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -264,22 +428,25 @@
     {
      "data": {
       "text/plain": [
-       "'iguana'"
+       "<Query(keywords='iguana')>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# add a instance containing\n",
     "query = Query(keywords=\"iguana\")\n",
-    "query.keywords"
+    "\n",
+    "query.count =  sentence_count(query.keywords)\n",
+    "query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +457,7 @@
        "1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -320,32 +487,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Query(keywords='iguana')>\n"
+      "357\n"
      ]
     }
    ],
    "source": [
     "for q in my_session.query(Query).order_by(Query.timestamp):\n",
-    "    print q"
+    "    print q.count"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "query1 = Query(keywords=\"robot\")\n",
     "query2 = Query(keywords=\"puppy\")\n",
+    "\n",
+    "for q in [query1,query2]:\n",
+    "    q.count = sentence_count(q.keywords)\n",
+    "\n",
     "my_session.add_all([query1,query2])\n",
     "my_session.commit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -355,19 +526,25 @@
      "output_type": "stream",
      "text": [
       "<Query(keywords='iguana')>\n",
+      "<Query(keywords='puppy')>\n",
       "<Query(keywords='robot')>\n",
-      "<Query(keywords='puppy')>\n"
+      "25394\n"
      ]
     }
    ],
    "source": [
-    "for q in my_session.query(Query).order_by(Query.timestamp):\n",
-    "    print q"
+    "# get the sum\n",
+    "count_sum = 0\n",
+    "for q in my_session.query(Query).order_by(Query.count):\n",
+    "    print q\n",
+    "    count_sum += q.count\n",
+    "\n",
+    "print count_sum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -376,12 +553,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Query(keywords='robot')>\n"
+      "<Query(keywords='puppy')>\n"
      ]
     }
    ],
    "source": [
-    "for q in my_session.query(Query).filter(Query.keywords.like('r%')):\n",
+    "for q in my_session.query(Query).filter(Query.keywords.like('p%')):\n",
     "    print q"
    ]
   },
@@ -411,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
